crates/uitest/fixtures/parser/operators.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: fixtures/parser/operators.fe
---
error[1-0001]: expected expression
  ┌─ operators.fe:3:8
  │
3 │     x + = 1
  │        ^ expected expression

error[1-0001]: unexpected syntax while parsing binary expression
  ┌─ operators.fe:3:9
  │
3 │     x + = 1
  │         ^^^ unexpected

error[1-0001]: expected expression
  ┌─ operators.fe:5:8
  │
5 │     x -    = 1
  │        ^ expected expression

error[1-0001]: unexpected syntax while parsing binary expression
  ┌─ operators.fe:5:12
  │
5 │     x -    = 1
  │            ^^^ unexpected

error[1-0001]: expected expression
  ┌─ operators.fe:6:8
  │
6 │     x * = 1
  │        ^ expected expression

error[1-0001]: unexpected syntax while parsing binary expression
  ┌─ operators.fe:6:9
  │
6 │     x * = 1
  │         ^^^ unexpected

error[1-0001]: unexpected syntax while parsing block
  ┌─ operators.fe:8:11
  │
8 │     x < < 1
  │           ^ unexpected

error[1-0001]: expected expression
   ┌─ operators.fe:10:8
   │
10 │     x < = 1
   │        ^ expected expression

error[1-0001]: unexpected syntax while parsing binary expression
   ┌─ operators.fe:10:9
   │
10 │     x < = 1
   │         ^^^ unexpected
